[cp] feat: improve entity creation and teleportation methods, enhance SpawnReason handling, and update lore management